# knitting-vs-tokio-bench

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
graphs/: plot_style.py  report.py
results/: knitting-bun-1773827812276.csv  knitting-bun-1780243990514.csv  knitting-bun-1780359504852.csv  knitting-deno-1773827925019.csv  knitting-deno-1780244054544.csv  knitting-deno-1780359560428.csv  knitting-node-1773828074699.csv  knitting-node-1780244145359.csv  knitting-node-1780359653274.csv  tokio-1773827721825.csv  tokio-1780243918454.csv  tokio-1780359436688.csv
results/graphs/: results.md
results/resources/: 1773788687792-bun-run1.log.txt  1773788687792-bun-run1.time.txt  1773788687792-bun-run2.log.txt  1773788687792-bun-run2.time.txt  1773788687792-bun-run3.log.txt  1773788687792-bun-run3.time.txt  1773788687792-deno-run1.log.txt  1773788687792-deno-run1.time.txt  1773788687792-deno-run2.log.txt  1773788687792-deno-run2.time.txt  1773788687792-deno-run3.log.txt  1773788687792-deno-run3.time.txt  1773788687792-node-run1.log.txt  1773788687792-node-run1.time.txt  1773788687792-node-run2.log.txt  1773788687792-node-run2.time.txt  1773788687792-node-run3.log.txt  1773788687792-node-run3.time.txt  1773788687792-summary.json  1773788687792-tokio-run1.log.txt  1773788687792-tokio-run1.time.txt  1773788687792-tokio-run2.log.txt  (+3 more)
scripts/: bench_all.mjs  bench_resources_quick.mjs
src/: arc_tokio.rs  bench.ts  csv.rs  csv.ts  display.rs  format.ts  knitting_8_512.ts  main.rs  main.ts  payloads.rs  payloads.ts  report.rs  resource_quick.ts  runtime.ts
